    New feature: Uses jQuery 1.1.4 (much faster)
    
    Bug fixed: UnicodeDecodeError wasn't raised properly in processing
    inbound email reply and formatflowed_decode() was called with wrong 
    parameter. Thanks Robert Leftwich (Real#0642)

    Bug fixed: When you reply via email to an issue, no notification
    was sent to those involved in the issue. Thanks Robert Leftwich.
    (Real#0413)
    
    New feature: When you reach the last line in any textarea input
    (eg. on adding a new issue) the textarea box automatically expands
    to add a few extra blank lines.
    
    New feature: Expires header set to all static content and set much
    further into the future for better HTTP caching.
    
    New feature: The Tell-a-friend and Subscribe-to-changes has been
    moved down below the issue threads.
    
    Bug fixed: Fixed possible XSS hole. Name and email checking now
    done when adding issues and followups.
    
    Bug fixed: Emails in unicode (non-ascii) characters could lead to
    email notifications being sent out incorrectly.

    New feature: The autorefresh interval starts on 3 seconds interval
    and increases the interval length by 30% each time it incurs.
    http://www.issuetrackerproduct.com/News/autorefresh-intervals/

    Bug fixed: multiple drafts were created sometimes.

    New feature: fromname, title and description of issues and
    followups are now stored as unicode! The default encoding is utf8.
    
    New feature: If you run Python 2.4 on your Zope you can configure
    the POP3 to use SSL. Thanks Shane Graber

    New feature: Possible to disable the 'Tell a friend' feature for
    anonymous users (eg. spambots for example). Thanks Fred Damberger
    
- 0.7.3

    Bug fixed: .svn and CVS folders could be created when you Update
    Everything.

    New feature: New version of addhrefs.py version 0.9.2.

    New feature: QuickAddIssue now shows the spambot prevention if
    switched on. Real#0343
    