@@ -1,3 +1,6 @@
+    Bug fixed: preParseEmailString would sometimes barf on unicode
+    strings for translation.
+    
     New feature: Uses jQuery 1.1.4 (much faster)
     
     Bug fixed: UnicodeDecodeError wasn't raised properly in processing
